# PokerEval

./: CMakeLists.txt  InputFileTest.txt  OutputFileTest2.txt  PokerHand.cpp  PokerHand.h  README.md  main.cpp
